--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,6 +1,7 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=649EB07E4DC9441EA67623A35159154E
 ProjectName=Third Person Game Template
+CopyrightNotice=Copyright Oleksandra Pylypiva. All Rights Reserved.
 
 [StartupActions]
 bAddPacks=True
@@ -8,3 +9,4 @@ InsertPack=(PackSource="StarterContent.upack",PackName="StarterContent")
 
 [SectionsToSave]
 +Section=StartupActions
+
