--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -4,9 +4,9 @@ EditorStartupMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
 GlobalDefaultGameMode=/Game/BP_TagGameGameMode.BP_TagGameGameMode_C
 
 [/Script/Engine.RendererSettings]
-r.ReflectionMethod=1
+r.ReflectionMethod=0
 r.GenerateMeshDistanceFields=True
-r.DynamicGlobalIlluminationMethod=1
+r.DynamicGlobalIlluminationMethod=2
 r.Lumen.TraceMeshSDFs=0
 r.Shadow.Virtual.Enable=1
 r.Mobile.EnableNoPrecomputedLightingCSMShader=1
@@ -59,7 +59,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_ThirdPerson",NewGameName="/Script/TagGame")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_ThirdPerson",NewGameName="/Script/TagGame")
-+ActiveClassRedirects=(OldClassName="TP_ThirdPersonGameMode",NewClassName="TagGameGameMode")
++ActiveClassRedirects=(OldClassName="TP_ThirdPersonGameMode",NewClassName="TagGameMode")
 +ActiveClassRedirects=(OldClassName="TP_ThirdPersonCharacter",NewClassName="TagGameCharacter")
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
@@ -132,3 +132,6 @@ ManualIPAddress=
 +CollisionChannelRedirects=(OldName="VehicleMovement",NewName="Vehicle")
 +CollisionChannelRedirects=(OldName="PawnMovement",NewName="Pawn")
 
+
+[CoreRedirects]
++ClassRedirects=(OldName="/Script/TagGame.TagGameGameMode",NewName="/Script/TagGame.TagGameMode")
